--- a/demo/src/main/res/xml/main.xml
+++ b/demo/src/main/res/xml/main.xml
@@ -24,14 +24,14 @@
   <PreferenceCategory
       android:title="Demo"
       app:iconSpaceReserved="false">
-    <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
+    <com.jaredrummler.android.colorpicker.ColorPickerPreference
         android:defaultValue="0xFF3F51B5"
         android:key="default_color"
         android:summary="This is the default ColorPreferenceCompat"
         android:title="Default color picker"
         app:iconSpaceReserved="false"/>
 
-    <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
+    <com.jaredrummler.android.colorpicker.ColorPickerPreference
         android:defaultValue="0xFF009688"
         android:key="square_color"
         android:summary="A square shaped color picker"
@@ -39,7 +39,7 @@
         app:cpv_colorShape="square"
         app:iconSpaceReserved="false"/>
 
-    <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
+    <com.jaredrummler.android.colorpicker.ColorPickerPreference
         android:defaultValue="0xFFEC407A"
         android:key="custom_only_color"
         android:summary="A picker that doesn't show the presets"
@@ -49,7 +49,7 @@
         app:cpv_dialogType="custom"
         app:iconSpaceReserved="false"/>
 
-    <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
+    <com.jaredrummler.android.colorpicker.ColorPickerPreference
         android:defaultValue="0x890099CC"
         android:key="color_with_alpha"
         android:summary="A picker with alpha slider"
@@ -59,7 +59,7 @@
         app:cpv_showColorShades="false"
         app:iconSpaceReserved="false"/>
 
-    <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
+    <com.jaredrummler.android.colorpicker.ColorPickerPreference
         android:defaultValue="0xFFCDDC39"
         android:key="my_presets"
         android:summary="A picker with presets different presets"
